--- a/HorusMobile/HorusMobile/Views/LoginPage.xaml
+++ b/HorusMobile/HorusMobile/Views/LoginPage.xaml
@@ -12,16 +12,17 @@
                 
                 <!--<Image Source="wallpaper.jpg" Aspect="AspectFill"></Image>-->
                 <ffimageloading:CachedImage 
-                Source="aclisa_bg.jpg"                
+                Source="Background.png"                
                 CacheDuration= "50"
                 RetryCount= "3"
                 RetryDelay= "600"
                 Aspect="AspectFill"
                 />
+                <!--<BoxView Color="#4163a2" Opacity="0.8"></BoxView>-->
                 <!--LoadingPlaceholder= "LoaderImage"
                 ErrorPlaceholder= "ErrorImage"-->
                 
-                <BoxView Color="#4163a2" Opacity="0.8"></BoxView>
+                
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="200"></RowDefinition>
@@ -30,7 +31,7 @@
                     </Grid.RowDefinitions>
                     <StackLayout Grid.Row="0" Padding="0,50">
                         <ffimageloading:CachedImage                    
-                        Source="aclisa_light_logo.png"                
+                        Source="aclisa_logo.png"                
                         CacheDuration= "50"
                         RetryCount= "3"
                         RetryDelay= "600"
@@ -42,9 +43,9 @@
                     <!--<Image Grid.Row="0" Source="xamarin_logo.png" WidthRequest="100" HeightRequest="100" Margin="0,50,0,30"></Image>-->
                 
                     <StackLayout Grid.Row="1" Padding="50,25">
-                        <Entry x:Name="username" Placeholder="Nombre de Usuario" PlaceholderColor="Black" TextColor="Black"></Entry>
-                        <Entry x:Name="password" Placeholder="Contraseña" PlaceholderColor="Black" IsPassword="True" TextColor="Black"></Entry>
-                        <Button  x:Name="btnLogin" Text="Iniciar Sesión" BackgroundColor="Cyan" BorderRadius="20" TextColor="#4163a2" FontSize="Medium" Clicked="OnLoginButtonClicked"></Button>
+                        <Entry x:Name="username" Placeholder="Nombre de Usuario" PlaceholderColor="#4B4B4B" TextColor="#4B4B4B" FontSize="25" Margin="0, 50, 0, 0"></Entry>
+                        <Entry x:Name="password" Placeholder="Contraseña" PlaceholderColor="#4B4B4B" IsPassword="True" TextColor="#4B4B4B" FontSize="25" Margin="0, 30"></Entry>
+                        <Button  x:Name="btnLogin" Text="Iniciar Sesión" BackgroundColor="#00acc1" BorderRadius="20" TextColor="White" FontSize="25" Clicked="OnLoginButtonClicked" Margin="0, 30"></Button>
                         <!--
                         <StackLayout Orientation="Horizontal">
                             <Label Text="Recuperar Contraseña" HorizontalOptions="EndAndExpand" FontAttributes="Bold" TextColor="#FFFFFF"></Label>
